fix: Replace dark mode package with new one that works with gatsby 3.x (#1183)
* fix: Replace dark mode package with new one that works with gatsby 3.x

* chore: Temp deleting pckge lock for a sec

* chore: Adding package lock back in

* style: Reformatted with prettier

* ci: Fixing remarkrc and community so tests pass ci

* refactor: Removing unneeded remarkrc changes

* refactor: Fix lint error

* fix: Make entire button clickable and support keyboard events

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -145,8 +145,8 @@ input {
   color: var(--color-text-primary);
 }
 
-body:not(.dark-mode) .dark-mode-only,
-.dark-mode .light-mode-only {
+body:not(.dark) .dark-mode-only,
+.dark .light-mode-only {
   display: none;
 }
 
@@ -281,7 +281,7 @@ select {
   justify-content: flex-end;
 }
 
-.dark-mode .nav {
+.dark .nav {
   border: none;
 }
 
